--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li>Email : <a href="mailto:jlbroughton88@gmail.com">Jlbroughton88@gmail.com</a></li>
       <li>Github : <a href="https://github.com/jlbroughton88">Github.com/Jlbroughton88</a></li>
       <li>Portfolio : <a href="#">Portfolio Coming Soon</a></li>
+      <li>Homework : <a href="https://jlbroughton88.github.io/Word-Guess-Game/"></a>Word Guess Game</li>
      </ul>
     </body>
 </html>
