--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li>Portfolio : <a href="#">Portfolio Coming Soon</a></li>
       <li>Homework : <a href="https://jlbroughton88.github.io/Word-Guess-Game/">Word Guess Game</a></li>
       <li>Homework : <a href="https://jlbroughton88.github.io/unit-4-game/">jQuery Crystal Collector (Unit 4)</a></li>
+      <li>Homework : <a href="https://jlbroughton88.github.io/TriviaGame/">Trivia Game</a></li>
 
      </ul>
     </body>
