--- a/index.html
+++ b/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Jacob Broughton Bio </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
-    <h1>Student Bio</h1>
-    <br>
-    <h2>Jacob Broughton</h2>
-    <br>
-    <img src="IMG_8355.JPG" height="300" width="300">
-    <br>
-    <p>My name is Jacob Broughton, i'm 19. I dont really have any formal experience other than a simple high school degree from Butler High School.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Student Bio</h1>
+            </div>
+        </div>
+        <br>
 
-    <br>
-    <h2>Contact Info</h2>
-     <ul> 
-      <li>Email : <a href="mailto:jlbroughton88@gmail.com">Jlbroughton88@gmail.com</a></li>
-      <li>Github : <a href="https://github.com/jlbroughton88">Github.com/Jlbroughton88</a></li>
-      <li>Portfolio : <a href="#">Portfolio Coming Soon</a></li>
-      <li>Homework : <a href="https://jlbroughton88.github.io/Word-Guess-Game/">Word Guess Game</a></li>
-      <li>Homework : <a href="https://jlbroughton88.github.io/unit-4-game/">jQuery Crystal Collector (Unit 4)</a></li>
-      <li>Homework : <a href="https://jlbroughton88.github.io/TriviaGame/">Trivia Game</a></li>
+        <h2>Jacob Broughton</h2>
 
-     </ul>
-    </body>
+        <br>
+
+        <img src="IMG_8355.JPG" height="300" width="300">
+
+        <br>
+
+        <p>My name is Jacob Broughton, i'm 19. I dont really have any formal experience other than a simple high school degree
+            from Butler High School.</p>
+
+
+        <br>
+        <h2>Contact Info</h2>
+        <ul>
+            <li>Email : <a href="mailto:jlbroughton88@gmail.com">Jlbroughton88@gmail.com</a></li>
+            <li>Github : <a href="https://github.com/jlbroughton88">Github.com/Jlbroughton88</a></li>
+            <li>Portfolio : <a href="#">Portfolio Coming Soon</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/Word-Guess-Game/">Word Guess Game</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/unit-4-game/">jQuery Crystal Collector (Unit 4)</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/TriviaGame/">Trivia Game</a></li>
+            <li>Homework : <a href=" https://jlbroughton88.github.io/GiphyAPI/">Giphytastic</a></li>
+        </ul>
+</body>
+
 </html>
