--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li>Email : <a href="mailto:jlbroughton88@gmail.com">Jlbroughton88@gmail.com</a></li>
             <li>Github : <a href="https://github.com/jlbroughton88">Github.com/Jlbroughton88</a></li>
             <li>Portfolio : <a href="#">Portfolio Coming Soon</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/HW-Wireframe/">Wireframe</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/Word-Guess-Game/">Word Guess Game</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/unit-4-game/">jQuery Crystal Collector (Unit 4)</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/TriviaGame/">Trivia Game</a></li>
