--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1>Student Bio</h1>
+                <h1 id="bioHead">Student Bio</h1>
             </div>
         </div>
-        <br>
+        <div class="row"></div>
+        
 
         <h2>Jacob Broughton</h2>
 
@@ -43,6 +44,7 @@
             <li>Homework : <a href="https://jlbroughton88.github.io/unit-4-game/">jQuery Crystal Collector (Unit 4)</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/TriviaGame/">Trivia Game</a></li>
             <li>Homework : <a href=" https://jlbroughton88.github.io/GiphyAPI/">Giphytastic</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/FirebaseHW/">Firebase HW</a></li>
         </ul>
 </body>
 
