--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
             <li>Homework : <a href="https://jlbroughton88.github.io/FirebaseHW/">Firebase HW</a></li>
             <li>Project 1 : <a href="https://jlbroughton88.github.io/projectMarvel//">Project 1</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/liri-node-app/">Liri-Node-App</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/bamazonSQL/">bamazon SQL</a></li>
+            
         </ul>
     </div>
 </div>
