--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
             <li>Project 1 : <a href="https://jlbroughton88.github.io/projectMarvel//">Project 1</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/liri-node-app/">Liri-Node-App</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/bamazonSQL/">bamazon SQL</a></li>
+            <li>Homework : <a href="https://placeholder.com">Friend Finder</a></li>
             
         </ul>
     </div>
