--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li>Homework : <a href="https://jlbroughton88.github.io/liri-node-app/">Liri-Node-App</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/bamazonSQL/">bamazon SQL</a></li>
             <li>Homework : <a href="https://placeholder.com">Friend Finder</a></li>
-            <li>Homework : <a href="https://bloodcurdling-phantom-76812.herokuapp.com/"></a></li>
+            <li>Homework : <a href="https://bloodcurdling-phantom-76812.herokuapp.com/">SPX Watchlist (Project 2)</a></li>
             
         </ul>
     </div>
