--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <li>Homework : <a href="https://jlbroughton88.github.io/bamazonSQL/">bamazon SQL</a></li>
             <li>Homework : <a href="https://placeholder.com">Friend Finder</a></li>
             <li>Homework : <a href="https://bloodcurdling-phantom-76812.herokuapp.com/">SPX Watchlist (Project 2)</a></li>
-            
+            <li>Homework : <a href="https://calm-gorge-82643.herokuapp.com/">NYT Scraper</a></li>
         </ul>
     </div>
 </div>
