--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             <li>Homework : <a href="https://placeholder.com">Friend Finder</a></li>
             <li>Homework : <a href="https://bloodcurdling-phantom-76812.herokuapp.com/">SPX Watchlist (Project 2)</a></li>
             <li>Homework : <a href="https://calm-gorge-82643.herokuapp.com/">NYT Scraper</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/Bootstrap-Portfolio/">Responsive Portfolio</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/Responsive-Portfolio/">Bootstrap Portfolio</a></li>
         </ul>
     </div>
 </div>
