--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             <li>Homework : <a href="https://calm-gorge-82643.herokuapp.com/">NYT Scraper</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/Bootstrap-Portfolio/">Responsive Portfolio</a></li>
             <li>Homework : <a href="https://jlbroughton88.github.io/Responsive-Portfolio/">Bootstrap Portfolio</a></li>
+            <li>Homework : <a href="https://jlbroughton88.github.io/memory-game/">Bootstrap Portfolio</a></li>
         </ul>
     </div>
 </div>
